--- a/Caelum.Loja/Caelum.Loja/Caelum.Loja.csproj
+++ b/Caelum.Loja/Caelum.Loja/Caelum.Loja.csproj
@@ -120,9 +120,12 @@
     <Compile Include="Model\Categoria.cs" />
     <Compile Include="Model\Produto.cs" />
     <Compile Include="Model\Usuario.cs" />
+    <Compile Include="Model\Venda.cs" />
+    <Compile Include="Model\VendaProduto.cs" />
     <Compile Include="Persistense\CategoriaDAO.cs" />
     <Compile Include="Persistense\ProdutoDAO.cs" />
     <Compile Include="Persistense\UsuarioDAO.cs" />
+    <Compile Include="Persistense\VendaDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
